src/test/ui/macros/missing-comma.stderr
error: expected token: `,`
  --> $DIR/missing-comma.rs:10:19
   |
LL |     println!("{}" a);
   |                   ^

error: no rules expected the token `b`
  --> $DIR/missing-comma.rs:12:12
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a b);
   |           -^ no rules expected this token in macro call
   |           |
   |           help: missing comma here

error: no rules expected the token `e`
  --> $DIR/missing-comma.rs:14:21
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a, b, c, d e);
   |                    -^ no rules expected this token in macro call
   |                    |
   |                    help: missing comma here

error: no rules expected the token `d`
  --> $DIR/missing-comma.rs:16:18
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a, b, c d, e);
   |                 -^ no rules expected this token in macro call
   |                 |
   |                 help: missing comma here

error: no rules expected the token `d`
  --> $DIR/missing-comma.rs:18:18
   |
LL | macro_rules! foo {
   | ---------------- when calling this macro
...
LL |     foo!(a, b, c d e);
   |                  ^ no rules expected this token in macro call

error: aborting due to 5 previous errors

